<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name" translatable="false">Telecine</string>
  <string name="launcher_name" translatable="false">@string/app_name</string>

  <string name="shortcut_name">Launch</string>
  <string name="tile_name">Launch Telecine</string>
  <string name="clear">Clear</string>
  <string name="record">Record</string>
  <string name="countdown_one">1…</string>
  <string name="countdown_two">2…</string>
  <string name="countdown_three">3…</string>
  <string name="launch_overlay">Launch Overlay</string>
  <string name="preferences">Preferences</string>
  <string name="countdown">Three second countdown</string>
  <string name="recents_hide">Hide from recent apps</string>
  <string name="video_size_percentage">Video size</string>
  <string name="notification_captured_title">Screen recording captured.</string>
  <string name="notification_captured_subtitle">Touch to view your screen recording.</string>
  <string name="notification_captured_share">Share</string>
  <string name="notification_captured_delete">Delete</string>
  <string name="notification_recording_title">Recording screen.</string>
  <string name="notification_recording_subtitle">Touch the clock area to stop recording.</string>
  <string name="recording_notification">Recording Notification</string>
  <string name="show_touches">Show Touches</string>
  <string name="static_shortcut_record_short_label">Record</string>
  <string name="static_shortcut_record_long_label">Start recording</string>
  <string name="static_shortcut_record_disabled_message">@string/static_shortcut_record_short_label</string>
  <string name="static_shortcut_overlay_short_label">Overlay</string>
  <string name="static_shortcut_overlay_long_label">Show overlay</string>
  <string name="static_shortcut_overlay_disabled_message">@string/static_shortcut_overlay_short_label</string>

  <array name="countdown">
    <item>@string/countdown_three</item>
    <item>@string/countdown_two</item>
    <item>@string/countdown_one</item>
  </array>
</resources>
