<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_overlay"
        android:shortcutDisabledMessage="@string/static_shortcut_overlay_disabled_message"
        android:shortcutId="overlay"
        android:shortcutLongLabel="@string/static_shortcut_overlay_long_label"
        android:shortcutShortLabel="@string/static_shortcut_overlay_short_label">
        <intent
            android:action="com.jakewharton.telecine.STATIC_SHORTCUT_OVERLAY"
            android:targetClass="com.jakewharton.telecine.TelecineShortcutLaunchActivity"
            android:targetPackage="com.jakewharton.telecine">
            <extra
                android:name="launch-action"
                android:value="Static Shortcut Overlay" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_record"
        android:shortcutDisabledMessage="@string/static_shortcut_record_disabled_message"
        android:shortcutId="record"
        android:shortcutLongLabel="@string/static_shortcut_record_long_label"
        android:shortcutShortLabel="@string/static_shortcut_record_short_label">
        <intent
            android:action="com.jakewharton.telecine.STATIC_SHORTCUT_RECORD"
            android:targetClass="com.jakewharton.telecine.TelecineShortcutLaunchActivity"
            android:targetPackage="com.jakewharton.telecine">
            <extra
                android:name="launch-action"
                android:value="Static Shortcut Record" />
            <extra
                android:name="auto-recording"
                android:value="true" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>